# mirror-self

./: .gitignore  README.md  index.html  pyproject.toml
src/mirrorself/: __init__.py  cli.py  config.py
src/mirrorself/core/: indexer.py  llm.py  prompts.py  retriever.py
src/mirrorself/tui/: app.py
